re commit