@@ -3,7 +3,6 @@ package com.fullstack.springboot.util;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
@@ -46,7 +45,7 @@ public class FileUtil {
 		for(MultipartFile file : oriFiles) {
 			System.out.println("!!!");
 			String genUuid = UUID.randomUUID().toString() + "-" + file.getOriginalFilename();
-			Path path = Paths.get(uploadPath, genUuid);
+			Path path = Path.of(uploadPath, genUuid);
 				
 			try {
 				Files.copy(file.getInputStream(), path);
